[package]
name = "pinball_gacha"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29.1"
egui = "0.29.1"
rapier2d = { version = "0.19.0", features = ["wasm-bindgen"] }
serde = { version = "1.0", features = ["derive"] }
nalgebra = "0.32" # Required by rapier
getrandom = { version = "0.2", features = ["js"] }
log = "0.4"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement", "Element"] }
rand = "0.8.5"

[web]
# No special configuration needed here usually for trunk, but sometimes good to have.

[profile.release]
opt-level = 2
